--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <input id="emailInput" type="email" name="email" id="email">
+    <input type="email" name="email" id="emailDOM">
     <button type="submit">Check</button>
     
 
